<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zaks.ayala.nearbydeals.ui.AddDealActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/title_activity_add_deal"
            app:titleTextColor="@android:color/white"

            />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_background"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >


                <!--<TextView-->
                    <!--style="@style/AppTheme.FieldHeader"-->
                    <!--android:text="@string/add_deal_description_header" />-->

                <EditText
                    android:id="@+id/deal_description"
                    style="@style/AppTheme.EditText"
                    android:hint="@string/add_deal_description_hint"
                    android:inputType="textAutoComplete" />

                <!--<TextView-->
                    <!--style="@style/AppTheme.FieldHeader"-->
                    <!--android:text="@string/add_deal_address_header" />-->

                <fragment
                    android:id="@+id/place_autocomplete_fragment"
                    android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                    style="@style/AppTheme.EditText"

                    />

                <!--<TextView-->
                    <!--style="@style/AppTheme.FieldHeader"-->
                    <!--android:text="@string/add_deal_from_header" />-->

                <EditText
                    android:id="@+id/deal_from"
                    style="@style/AppTheme.EditText"
                    android:focusable="false"
                    android:hint="@string/add_deal_from_hint"
                    android:inputType="datetime"
                    android:onClick="OpenCalendar" />

                <!--<TextView-->
                    <!--style="@style/AppTheme.FieldHeader"-->
                    <!--android:text="@string/add_deal_to_header" />-->

                <EditText
                    android:id="@+id/deal_to"
                    style="@style/AppTheme.EditText"
                    android:focusable="false"
                    android:hint="@string/add_deal_to_hint"
                    android:inputType="datetime"
                    android:onClick="OpenCalendar" />

                <Button
                    style="@style/AppTheme.Button"
                    android:layout_gravity="right"
                    android:onClick="SaveNewDeal"
                    android:text="@string/add_deal_save" />

            </LinearLayout>

</android.support.design.widget.CoordinatorLayout>