<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zaks.ayala.nearbydeals.ui.SupplierDetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/title_activity_suplier_details"
            app:titleTextColor="@android:color/white"

            />
    </android.support.design.widget.AppBarLayout>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/card_padding"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@color/gray_background">


            <!--<TextView-->
                <!--style="@style/AppTheme.FieldHeader"-->
                <!--android:text="@string/supplier_details_supplier_name"/>-->
            <EditText
               style="@style/AppTheme.EditText"
                android:id="@+id/supplier_details_supplier_name"
                android:hint="@string/supplier_details_supplier_name"/>
            <!--<TextView-->
                <!--style="@style/AppTheme.FieldHeader"-->
                <!--android:text="@string/supplier_details_supplier_email"/>-->
            <EditText
                style="@style/AppTheme.EditText"
                android:id="@+id/supplier_details_supplier_email"
                android:hint="@string/supplier_details_supplier_email"
                android:inputType="textEmailAddress"/>
            <!--<TextView-->
                <!--style="@style/AppTheme.FieldHeader"-->
                <!--android:text="@string/supplier_details_supplier_phone"/>-->
            <EditText
                style="@style/AppTheme.EditText"
                android:id="@+id/supplier_details_supplier_phone"
                android:hint="@string/supplier_details_supplier_phone"
                android:inputType="phone"/>
            <!--<TextView-->
                <!--style="@style/AppTheme.FieldHeader"-->
                <!--android:text="@string/supplier_details_supplier_address"/>-->
            <fragment
                android:id="@+id/supplier_details_supplier_address"
                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                style="@style/AppTheme.EditText"
                />
            <!--<TextView-->
                <!--style="@style/AppTheme.FieldHeader"-->
                <!--android:text="@string/supplier_details_supplier_category"/>-->
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/supplier_details_supplier_category">

            </Spinner>

            <Button
                style="@style/AppTheme.Button"
                android:layout_gravity="right"
                android:onClick="SaveNewSupplier"
                android:text="@string/add_deal_save" />


</LinearLayout>
</android.support.design.widget.CoordinatorLayout>